finally fixed the structure